--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -14,6 +14,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/base/jquery-ui.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="css/timepicker.css" />
     <!-- <link rel="stylesheet" href="css/datepicker.css" /> -->
     <link rel="stylesheet" href="css/style.css" />
