--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,44 +12,42 @@
         <div class="col-lg-12 login-panel">
           <!-- Brand logo start -->
           <div class="brand-logo text-center">
-            <img src="images/ZWAP-svg.svg" alt="ARRow" width="200" />
+            <img src="img/ZWAP-svg.svg" alt="ARRow" width="200" />
           </div>
           <!-- ./Brand logo -->
           <h3 class="text-center">Login to your account</h3>
           <!-- Login input start -->
-          <form action="/route/login" method="POST">
-            <form action="/">
-              <div class="form-group">
-                <label for="loginEmail">Email address</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="loginEmail"
-                  aria-describedby="emailHelp"
-                />
-              </div>
-              <div class="form-group mt-3">
-                <label for="loginPassword">Password</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="loginPassword"
-                />
-              </div>
-              <div class="form-group form-check mt-3">
-                <input
-                  type="checkbox"
-                  class="form-check-input"
-                  id="rememberMe"
-                />
-                <label class="form-check-label" for="rememberMe"
-                  >Remember Me</label
-                >
-              </div>
-              <button type="submit" class="btn btn-primary mt-4 w-100">
-                Login with email
-              </button>
-            </form>
+          <form action="http://localhost:3000/adminDashboard">
+            <div class="form-group">
+              <label for="loginEmail">Email address</label>
+              <input
+                type="email"
+                class="form-control"
+                id="loginEmail"
+                name="loginEmail"
+                aria-describedby="emailHelp"
+                required
+              />
+            </div>
+            <div class="form-group mt-3">
+              <label for="loginPassword">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="loginPassword"
+                name="loginPassword"
+                required
+              />
+            </div>
+            <div class="form-group form-check mt-3">
+              <input type="checkbox" class="form-check-input" id="rememberMe" />
+              <label class="form-check-label" for="rememberMe"
+                >Remember Me</label
+              >
+            </div>
+            <button type="submit" class="btn btn-primary mt-4 w-100">
+              Login with email
+            </button>
           </form>
           <!-- ./Login input -->
         </div>
