--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('include/_meta') %>
-    <title>RTG Employee Directory | Login</title>
+    <title>ZWAP | Login</title>
   </head>
   <body id="login-page">
     <div
