--- a/views/colleagues.ejs
+++ b/views/colleagues.ejs
@@ -1,89 +1,75 @@
 <!-- Include Header -->
-<%- include('include/_header') %>
+<%- include('include/_header_employee') %>
 <!-- /Include Header -->
 
 <!-- Main Site -->
-<main class="container main">
-  <div id="employee_legend" class="d-flex align-items-center mb-5">
-    <div class="w-75">
-      <h1 class="blue">Colleagues List</h1>
-    </div>
-    <div class="w-50">
-      <div class="input-group mb-3 justify-content-end">
-        <div class="input-group-prepend">
-          <label class="input-group-text" for="inputGroupSelect01"
-            >Options</label
-          >
-        </div>
-        <select class="custom-select w-50" id="inputGroupSelect01">
-          <option selected>Select a day</option>
-          <option value="">Monday</option>
-          <option value="">Tuesday</option>
-          <option value="">Wednesday</option>
-          <option value="">Thursday</option>
-          <option value="">Friday</option>
-          <option value="">Saturday</option>
-          <option value="">Sunday</option>
+<main id="site-main">
+  <div class="container" id="adminDashboard">
+    <div class="box-nav d-flex justify-content-between">
+      <div></div>
+
+      <div class="d-flex flex-gap-20">
+        <!-- <select
+          class="date-filter-handle filter-handle"
+          id="date-filter-handle"
+        >
+          <i class="fa-solid fa-caret-down"></i>
+          <option value="">Filter by Date</option>
+        </select> -->
+        <select
+          class="jobType-filter-handle filter-handle"
+          id="jobType-filter-handle"
+        >
+          <i class="fa-solid fa-caret-down"></i>
+          <option value="">Filter by Job Type</option>
+          <option value="Full-time">Full-time</option>
+          <option value="Part-time">Part-time</option>
         </select>
       </div>
     </div>
-  </div>
-  <div id="employee_info">
-    <div class="employee_right_panel w-100">
+
+    <!-- Form Handling -->
+    <form action="/" method="POST">
       <table class="table">
         <thead class="thead-dark">
           <tr>
-            <th scope="col">Name</th>
-            <!-- Current Schedule -->
-            <th scope="col">Start Time</th>
-            <th scope="col">End Time</th>
-            <th scope="col">Hours</th>
-            <!-- Availability -->
-            <th scope="col">Start Time</th>
-            <th scope="col">End Time</th>
-            <th scope="col">Hours</th>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Job Type</th>
+            <th>Action</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td scope="row">Rohan T G</td>
-            <!-- Current Schedule -->
-            <td class="current_bg">08:00AM</td>
-            <td class="current_bg">04:00PM</td>
-            <td class="current_bg">8</td>
-            <!-- Availability -->
-            <td class="available_bg">08:00AM</td>
-            <td class="available_bg">04:00PM</td>
-            <td class="available_bg">8</td>
+        <tbody id="table" class="filter-table-data">
+          <% for(var i = 0; i < users.length; i++) { %>
+          <% var count = 0; %>
+          <% for(var j = 0; j < 7; j++) { %>
+          <% } %>
+
+          <tr data-jobType="<%= users[i].jobType %>">
+            <td><%= i + 1 %></td>
+            <td>
+              <a class="link" href="/employee?id=<%= users[i]._id %>"
+                ><%= users[i].name %></a
+              >
+            </td>
+            <td><%= users[i].email %></td>
+            <td><%= users[i].jobType %></td>
+            <td>
+              <a
+                href="/create_ticket?id=<%= users[i]._id %>"
+                class="btn-border-shadow update"
+                ><span class="text-gradient">Create a Request</span></a
+              >
+            </td>
           </tr>
-          <tr>
-            <td scope="row">Remya K S</td>
-            <!-- Current Schedule -->
-            <td class="current_bg">08:00AM</td>
-            <td class="current_bg">04:00PM</td>
-            <td class="current_bg">8</td>
-            <!-- Availability -->
-            <td class="available_bg">08:00AM</td>
-            <td class="available_bg">04:00PM</td>
-            <td class="available_bg">8</td>
-          </tr>
-          <tr>
-            <td scope="row">Amey A P</td>
-            <!-- Current Schedule -->
-            <td class="current_bg"></td>
-            <td class="current_bg"></td>
-            <td class="current_bg"></td>
-            <!-- Availability -->
-            <td class="available_bg"></td>
-            <td class="available_bg"></td>
-            <td class="available_bg"></td>
-          </tr>
+
+          <% } %>
         </tbody>
       </table>
-    </div>
+    </form>
   </div>
 </main>
-
 <!-- /Main Site -->
 
 <!-- Include Footer -->
