--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -4,12 +4,12 @@
     <div class="form-group">
       <label for="name" class="text-dark">Name</label>
       <input type="hidden" name="id" value="" />
-      <input type="text" name="name" value="" placeholder="Rohan T George" />
+      <input type="text" name="name" value="" placeholder="Enter Employee Name" />
     </div>
 
     <div class="form-group">
       <label for="email" class="text-dark">Email</label>
-      <input type="text" name="email" value="" placeholder="rohan@gmail.com" />
+      <input type="text" name="email" value="" placeholder="example@example.com" />
     </div>
 
     <div class="form-group">
