--- a/views/include/_ticketModal.ejs
+++ b/views/include/_ticketModal.ejs
@@ -1,13 +1,13 @@
 <div id="transferTicket" class="modal-box">
   <header>
     <a href="javascript:void(0);" class="js-modal-close close">×</a>
-    <h3>Update Your Availability</h3>
+    <h3>Create A New Ticket</h3>
     <span class="text-dark"
-      >Use the below form to update your availability</span
+      >Use the below form to create a request to Transfer/Swap Shifts</span
     >
   </header>
   <div class="modal-body">
     <!-- Form Handling -->
-    This is the Transfer Ticket Modal
+    <%- include('../include/_ticketForm') %>
   </div>
 </div>
