Auto updation left

--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -1,5 +1,5 @@
 <!-- Include Header -->
-<%- include('include/_header') %>
+<%- include('include/_headerAdmin') %>
 <!-- /Include Header -->
 
 <!-- Main Site -->
