--- a/views/include/_employeeInfo.ejs
+++ b/views/include/_employeeInfo.ejs
@@ -1,4 +1,4 @@
-<% console.log(allUser, "allUser"); %>
+<% //console.log(allUser, "allUser"); %>
 <div id="dates"></div>
 
 <div id="employee_info">
