--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,7 @@ a.delete {
 a.update:hover,
 a.delete:hover {
   background-color: #8e2de2;
+  color: #fff;
   transition: 0.3s ease-in-out;
 }
 
@@ -528,6 +529,22 @@ a.close:hover {
     height: 100%;
     overflow-y: scroll;
   }
+}
+
+#update_user_time {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 30px;
+}
+
+.grid-col-span-2 {
+  grid-column: 1/3;
+}
+
+.d-grid-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 30px;
 }
 /********************** Employee Page Styling End **********************/
 
