--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <% //console.log(userId, "This is the useID"); %>
     <!-- Header -->
     <header id="header">
       <nav>
@@ -52,18 +53,22 @@
                   id="navbarSupportedContent"
                 >
                   <ul class="navbar-nav mr-auto">
+                    <% if(userType == false) { %>
                     <li class="nav-item active">
                       <a class="nav-link" href="/colleagues">All Colleagues </a>
                     </li>
+                    <% } %> 
+                    <% if(userType == true) { %>
                     <li class="nav-item active">
                       <a class="nav-link" href="/admin">All Employees </a>
                     </li>
                     <li class="nav-item active">
                       <a class="nav-link" href="/allTickets">All Tickets </a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/">Logout</a>
-                    </li>
+                    <% } %>
+                    <form action="/logout" method="POST">
+                      <button class="btn btn-primary btn_shape">Logout</button>
+                    </form>
                   </ul>
                 </div>
               </nav>
